--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-streamlit-option-menu
-numpy
-pandas
-plotly
+streamlit==1.26.0
+streamlit-option-menu==0.3.2
+numpy==1.23.5
+pandas==1.5.3
+plotly==5.15.0
 
